# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  requirements.txt  tasks.py  test.db
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: run.py
src/app/models/: balance.py  balance_controller.py  category_controller.py  transaction_controller.py  user_logic.py
src/app/user_interface/: __init__.py  category_transactions_view.py  category_view.py  home_view.py  login_view.py  register_view.py  transaction_view.py  ui_manager.py
src/database/: __init__.py  categories.py  create_database.py  database.py  expense.py  income.py  schema.sql  user.py
src/tests/: balance_controller_test.py  clear_database.py  database_test.py  transaction_controller_test.py  transaction_test.py  user_logic_test.py  user_test.py
